--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -3,5 +3,6 @@
     *ngFor="let task of tasks"
     [task]="task"
     (OnDeleteTask)="deleteTask(task)"
+    (OnToggleReminder)="toggleReminder(task)"
   ></app-task-item>
 </div>
